tweaked minor layout issues

--- a/assets/style.css
+++ b/assets/style.css
@@ -28,6 +28,11 @@ i{
     text-align: center;
 
 }
+form{
+    text-align: center;
+    font-family: 'Press Start 2P', cursive;
+    
+}
 
 #play-btn{
     text-align: center;
@@ -42,16 +47,18 @@ i{
 #question{
     font-size: 20px;
     padding-bottom: 20px;
-    padding-top: 20px
+    padding-top: 25px
 }
 #choice-one{
-    text-align: center;  
+    text-align: center;
+    margin-bottom: 20px; 
     background-color:#363636;
     color:#ffe08a;
     font-family: 'Press Start 2P', cursive;
 }
 #choice-two{
     text-align: center;
+    margin-bottom: 20px;
     background-color:#363636;
     color:#ffe08a;
     font-family: 'Press Start 2P', cursive;
@@ -59,19 +66,21 @@ i{
 }
 #choice-three{
     text-align: center;
+    margin-bottom: 20px;
     background-color:#363636;
     color:#ffe08a;
     font-family: 'Press Start 2P', cursive;
 }
 #choice-four{
     text-align: center;
+    margin-bottom:20px;
     background-color:#363636;
     color:#ffe08a;
     font-family: 'Press Start 2P', cursive;
 }
 #carousel{
     text-align: center;
-
+    font-size: 20px;
 }
 .go-memo{
     text-align: center;
@@ -80,11 +89,7 @@ i{
     font-family: 'Press Start 2P', cursive;
     color: darkred;
 }
-form{
-    text-align: center;
-    font-family: 'Press Start 2P', cursive;
-    
-}
+
 #player-initials{
     text-align: center;
     font-size:20px
